<resources>
    <string name="app_name">Lust</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Log in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_log_in_short">Log In</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is invalid or too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="action_logout">Log Out</string>
    <string name="error_dialog_title_connection_to_server">Connection Unsuccessful!</string>
    <string name="error_dialog_message_connection_to_server">There was an error connecting to the server.Please, try again later.</string>
    <string name="error_dialog_positive_button_connection_to_server">OK</string>
    <string name="error_dialog_title_incorrect_credentials">Login Unsuccessful!</string>
    <string name="login_link_register_text">Don\'t have an account?</string>
    <string name="register_link_login_text">Already have an account?</string>
    <string name="title_activity_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_in_short">Register</string>
    <string name="prompt_first_name">First name</string>
    <string name="prompt_second_name">Second name</string>
    <string name="prompt_user_name">User name</string>
    <string name="login_register">Sign up</string>
    <string name="login_forgoten_click_text">Click</string>
    <string name="login_Forgoten_pas_text">Forgot your password?</string>
    <string name="register_login">Click</string>
    <string name="action_search">Search</string>
    <string name="action_notification">Notification</string>
    <string name="goingOutImage">Going out button</string>
</resources>
